<resources>
    <string name="app_name">Coding Challenge Application</string>
    <string name="msgError">Oops, something went wrong!</string>
    <string name="msgInternetConnectionError">Could not reach server, check your internet connection.</string>

    <string name="serachEditText">Please Text Your Search Here</string>
    <string name="serachButton">Search</string>

    <string name="userNameTextView">User Name</string>
    <string name="imageTagsTextView">Image’s Tags</string>
    <string name="likesNumberTextView">Number of likes.</string>
    <string name="downloadsNumberTextView">Number of downloads</string>
    <string name="commentsNumberTextView">Number of comments</string>


    <string name="msg_Empty_Search_Text_error">Please type the search word</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>