<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="result"
            type="group.payback.codingchallengeapplication.domain.models.Hit" />
        <variable
            name="itemViewModel"
            type="group.payback.codingchallengeapplication.presentation.ui.imageDetails.ImageDetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.imageDetails.ImageDetailsFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:visibility="visible"
            app:cardCornerRadius="8dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/Item_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_margin="5dp"
                    loadImageFromUrl="@{result.webformatURL}"
                    android:background="#B3B3B3"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@string/userNameTextView"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@{result.user}"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@string/likesNumberTextView"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        applyIntToStringText="@{result.likes}"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@string/downloadsNumberTextView"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        applyIntToStringText="@{result.downloads}"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@string/commentsNumberTextView"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        applyIntToStringText="@{result.comments}"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@string/imageTagsTextView"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="#B3B3B3"
                        android:text="@{result.tags}"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
